--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,6 @@
 /* Style the header with a grey background and some padding */
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
-@import url('https://fonts.googleapis.com/css?family=Amatic+SC|Teko');
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 .header {
     border-bottom: solid 2px white;
     position: fixed;
@@ -8,41 +8,42 @@
     width: 100%;
     height: 70px;
     background-color: #76b852;
+    z-index:1;
   }
-  
+
   /* Style the header links */
 .header a {
     float: left;
-    font-size: 28px!important;
-    font-weight: 900!important;
+    font-size: 30px!important;
     line-height: 25px;
-    color: #76b852;
-    font-family: 'Amatic SC', cursive;
+    color: #ffffff;
+    font-family: 'Raleway', sans-serif;
   }
-  
+
   /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
 .header a.logo {
-    font-weight: 400;
+    font-weight: 400!important;
     margin-left: 100px;
     text-decoration: none;
-    background-color: #ffffff;
+    background-color: #59913B;
     padding: 25.5px;
-    padding-right: 75px;
+    padding-left: 35px;
+    padding-right: 35px;
     padding-bottom: 19px;
     position: relative;
   }
-  
+
   /* Change the background color on mouse-over */
   .header a:hover {
     cursor: pointer;
   }
-  
+
   /* Style the active/current link*/
   .header a.active {
     background-color: dodgerblue;
     color: white;
   }
-  
+
   /* Float the link section to the right */
   .header-right {
     float: right;
@@ -50,8 +51,8 @@
     margin-top: 10px;
     color: #ffffff;
   }
-  
-  /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */ 
+
+  /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
   @media screen and (max-width: 500px) {
     .header a {
       float: none;
@@ -74,9 +75,4 @@
       position: relative;
       left: 3%;
       top: -18px;
-  }
-  .icon{
-    position: absolute;
-    left: 215px;
-    top: 5px;
   }
