--- a/src/Components/LeftBar/LeftBar.css
+++ b/src/Components/LeftBar/LeftBar.css
@@ -1,5 +1,29 @@
 .left-bar{
-    background-color: red;
-    position: absolute;
-    width: 100px;
+  top: 0;
+  position: fixed;
+  width: 100px;
+  height: 100%;
+  border-right: 2px solid white;
+  background-color: #59913B;
+  z-index: 2;
+}
+.icon{
+  position: fixed;
+  top: 5px;
+  left: 18px;
+}
+.icon-back{
+  position: fixed;
+  width: 100px;
+  left:0;
+  top: 0;
+  height: 11.3%;
+  border-bottom: 2px solid white;
+}
+.history{
+  position: fixed;
+  top: 100px;
+  left: 24px;
+  cursor: pointer;
+  
 }
