--- a/src/Components/Answer/Answer.css
+++ b/src/Components/Answer/Answer.css
@@ -1,69 +1,67 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+.main{
+  position: relative;
+  top: 150px;
+  max-width: 500px;
+  left: 250px;
+}
 .kart{
-    width: fit-content;
+    width: 500px;
     max-width: 640px;
     color: white;
     height: auto;
+    background-color: #ffffff;
     position: relative;
-    left: 16%;
-    top: 90px;
-    padding: 10px;
     font-family: 'Ubuntu', sans-serif!important;
+    font-size: auto!important;
+    border: solid 1px #D5DDE7;
+    border-radius: 5px;
+    float: left;
+    padding: 5px;
+    margin: 15px;
 }
 .answer{
-    padding-left: 100px!important;
     color:#808080!important;
-    padding: 30px;
-    border: solid 1px #D5DDE7;
-    background-color: #ffffff;
-    border-radius: 5px;
-    margin: 20px!important;
-}
+    max-width: 390px;
+    float: left;
+    margin: 15px;
+    }
 .answers-info{
     font-family: 'Montserrat', sans-serif;
     font-size: 13px;
-    left: 220px;
     position: relative;
-    padding-top: 30px;
     height: 10px;
     font-weight: 100;
     color: #c4dcc6;
+    float: right;
 }
 .answer-nick{
     position: relative;
-    left: 120px;
-    top:0px;
     color: purple;
+    padding: 15px;
 }
 .answer-date{
     position: relative;
-    left: 102px;
-    top:0px;
     color: #008000;
 }
 .seed{
     position:relative;
     font-size: 35px;
     color: #76b852;
-    top: 25px;
 }
 .arrow-up {
     position: relative;
-    top: 15px;
-    left: 17px;
 }
 .arrow-down{
     position: relative;
-    top: 110px;
-    left: -17px;
 }
 .answers-stats{
-    position: absolute;
-    width: 70px;
-    left: 35px;
-    height: 160px;
-    top: 31px;
+  padding: 10px;
+    position: relative;
+    max-width: 50px;
+    height: auto;
     border-right: solid 1px #D5DDE7;
     background-color: #ffffff;
     text-align: center;
+    float: left;
 }
