--- a/src/Components/Answer/Answer.css
+++ b/src/Components/Answer/Answer.css
@@ -2,27 +2,27 @@
 .main{
   position: relative;
   top: 150px;
-  max-width: 500px;
-  left: 250px;
+  max-width: 600px!important;
+  left: 16.4%;
 }
 .kart{
-    width: 500px;
-    max-width: 640px;
+    width: 580px;
+    max-width: 600px;
     color: white;
     height: auto;
     background-color: #ffffff;
     position: relative;
-    font-family: 'Ubuntu', sans-serif!important;
-    font-size: auto!important;
+    font-family: 'PT Sans Narrow', sans-serif!important;
+    font-size: 15px!important;
     border: solid 1px #D5DDE7;
     border-radius: 5px;
     float: left;
-    padding: 5px;
-    margin: 15px;
+    padding: 20px;
+    margin: 10px;
 }
 .answer{
     color:#808080!important;
-    max-width: 390px;
+    max-width: 470px;
     float: left;
     margin: 15px;
     }
@@ -64,4 +64,5 @@
     background-color: #ffffff;
     text-align: center;
     float: left;
+    top: 20px;
 }
