--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 .içerik{
     padding: 25px;
-    font-size: 23px;
-    font-family: 'PT Sans Narrow', sans-serif!important;
+    font-size: 18px;
+    font-family: 'Ubuntu', sans-serif!important;
     font-weight: 500;
 }
