--- a/src/Components/Home/Answer/Answer.css
+++ b/src/Components/Home/Answer/Answer.css
@@ -1,32 +1,32 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-.main{
-  position: relative;
-  top: 150px;
-  max-width: 800px!important;
-  left: 11.3%;
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+.main {
+    position: relative;
+    top: 150px;
+    max-width: 800px !important;
+    left: 11.3%;
 }
-.kart{
+.kart {
     width: 730px;
     color: white;
     height: auto;
     background-color: #ffffff;
     position: relative;
-    font-family: 'PT Sans Narrow', sans-serif!important;
-    font-size: 15px!important;
-    border: solid 1px #D5DDE7;
+    font-family: "PT Sans Narrow", sans-serif !important;
+    font-size: 15px !important;
+    border: solid 1px #d5dde7;
     border-radius: 5px;
     float: left;
     padding: 20px;
     margin: 10px;
 }
-.answer{
-    color:#808080!important;
+.answer {
+    color: #808080 !important;
     max-width: 595px;
     float: left;
     margin: 15px;
-    }
-.answers-info{
-    font-family: 'Montserrat', sans-serif;
+}
+.answers-info {
+    font-family: "Montserrat", sans-serif;
     font-size: 13px;
     position: relative;
     height: 10px;
@@ -34,33 +34,33 @@
     color: #c4dcc6;
     float: right;
 }
-.answer-nick{
+.answer-nick {
     position: relative;
     color: purple;
     padding: 15px;
 }
-.answer-date{
+.answer-date {
     position: relative;
     color: #008000;
 }
-.seed{
-    position:relative;
+.seed {
+    position: relative;
     font-size: 35px;
     color: #76b852;
 }
 .arrow-up {
     position: relative;
 }
-.arrow-down{
+.arrow-down {
     position: relative;
 }
-.answers-stats{
-  padding: 10px;
-  padding-left: 0;
+.answers-stats {
+    padding: 10px;
+    padding-left: 0;
     position: relative;
     max-width: 50px;
     height: auto;
-    border-right: solid 1px #D5DDE7;
+    border-right: solid 1px #d5dde7;
     background-color: #ffffff;
     text-align: center;
     float: left;
