--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Abel');
+@import url("https://fonts.googleapis.com/css?family=Abel");
 body {
-  margin: 0;
-  padding: 0;
-  background-color: #76b852;
+    margin: 0;
+    padding: 0;
+    background-color: #76b852;
 }
-.button{
-  cursor: pointer;
+
+.button {
+    cursor: pointer;
 }
