--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,84 +1,86 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 .login-page {
-    position: relative;
-    top: 50px;
-    height: 400px;
-    width: 1000px;
-    padding: 8% 0 0;
-    margin: auto;
-    background: #FFFFFF;
-    border-radius: 5px;
+  position: relative;
+  top: 50px;
+  height: 400px;
+  width: 1000px;
+  padding: 8% 0 0;
+  margin: auto;
+  background: #ffffff;
+  border-radius: 5px;
 }
 .form {
-    position: relative;
-    max-width: 360px;
-    margin-left: 500px;
-    padding: 45px;
+  position: relative;
+  max-width: 360px;
+  margin-left: 500px;
+  padding: 45px;
 }
 .form input {
-    font-family: "Roboto", sans-serif;
-    outline: 0;
-    background: #E6E6E6;
-    width: 100%;
-    margin: 0 0 15px;
-    padding: 15px;
-    box-sizing: border-box;
-    font-size: 14px;
-    border: solid 1px #D5DDE7;
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #e6e6e6;
+  width: 100%;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+  border: solid 1px #d5dde7;
 }
 .form button {
-    font-family: "Roboto", sans-serif;
-    text-transform: uppercase;
-    outline: 0;
-    background: #76b852;
-    width: 100%;
-    border: 0;
-    padding: 15px;
-    color: #FFFFFF;
-    font-size: 14px;
-    -webkit-transition: all 0.3 ease;
-    transition: all 0.3 ease;
-    cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #76b852;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #ffffff;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
 }
-.form button:hover,.form button:active,.form button:focus {
-    background: #4c38b6;
+.form button:hover,
+.form button:active,
+.form button:focus {
+  background: #4c38b6;
 }
 .form .message {
-    margin: 15px 0 0;
-    color: #b3b3b3;
-    font-size: 12px;
+  margin: 15px 0 0;
+  color: #b3b3b3;
+  font-size: 12px;
 }
 .form .message a {
-    color: #b3b3b3;
-    text-decoration: none;
+  color: #b3b3b3;
+  text-decoration: none;
 }
 .form .register-form {
-    display: none;
+  display: none;
 }
-.welcome-div{
-    position: absolute;
-    top: 50px;
-    width: 1000px;
-    height: 500px;
+.welcome-div {
+  position: absolute;
+  top: 50px;
+  width: 1000px;
+  height: 500px;
 }
-.welcome-p{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 50px;
-    font-weight: bold;
-    position: absolute;
-    left: 13%;
-    color: #666666;
+.welcome-p {
+  font-family: "Montserrat", sans-serif;
+  font-size: 50px;
+  font-weight: bold;
+  position: absolute;
+  left: 13%;
+  color: #666666;
 }
-.info-p{
-    position: absolute;
-    top: 30%;
-    left: 8.5%;
-    font-family: 'Poppins', sans-serif;
-    font-size: 30px;
-    max-width: 400px;
-    color: #666666;
+.info-p {
+  position: absolute;
+  top: 30%;
+  left: 8.5%;
+  font-family: "Poppins", sans-serif;
+  font-size: 30px;
+  max-width: 400px;
+  color: #666666;
 }
-.register-label{
+.register-label {
   cursor: pointer;
   color: #4c38b6;
 }
