--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -6,3 +6,9 @@
     font-family: 'Ubuntu', sans-serif!important;
     font-weight: 500;
 }
+  @media screen and (max-width: 500px) {
+    .içerik{
+      padding: 2px;
+      font-size: 12px!important;
+    }
+  }
