--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,10 +3,10 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 .header {
     border-bottom: solid 2px white;
-    position: fixed;
+    position: fixed!important;
     left: 0px;
     width: 100%;
-    height: 70px;
+    height: 11.3%;
     background-color: #76b852;
     z-index:1;
   }
@@ -14,7 +14,7 @@
   /* Style the header links */
 .header a {
     float: left;
-    font-size: 30px!important;
+    font-size: auto!important;
     line-height: 25px;
     color: #ffffff;
     font-family: 'Raleway', sans-serif;
@@ -22,15 +22,13 @@
 
   /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
 .header a.logo {
-    font-weight: 400!important;
+    font-size: 35px;
+    font-weight: 700!important;
     margin-left: 100px;
     text-decoration: none;
-    background-color: #59913B;
     padding: 25.5px;
-    padding-left: 35px;
-    padding-right: 35px;
-    padding-bottom: 19px;
     position: relative;
+    height: 11.3%;
   }
 
   /* Change the background color on mouse-over */
@@ -54,14 +52,39 @@
 
   /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
   @media screen and (max-width: 500px) {
-    .header a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .header-right {
-      float: none;
-    }
+                .header{
+                  height: 10%;
+                }
+                .header a {
+                  display: block;
+                  text-align: left;
+                  font-size: 15px!important;
+                }
+                .header a.logo {
+                  height: 5%;
+                  padding: 6px;
+                  padding-left: 0;
+                  margin-left: 50px;
+                  float: left!important;
+                  margin-right: 10px;
+                }
+                .header-right {
+                    float: left!important;
+                    margin-top: 10px;
+                    color: #ffffff;
+                    margin-right: 0px;
+                  }
+                .user{
+                  position: relative;
+                  top: -5px;
+                  height: 25px!important;
+                }
+                .nickname{
+                  top: -15px!important;
+                }
+                .dot{
+                  top: -15px!important;
+                }
   }
   .nickname{
     position: relative;
