--- a/src/components/home/addContent/addContent.css
+++ b/src/components/home/addContent/addContent.css
@@ -40,17 +40,12 @@
   padding-left: 20px;
   font-weight: bold;
 }
-.içerik label{
+.card label{
   color: #6dc066;
   font-weight: bold;
+  margin-right: 10px;
 }
-.içerik Button{
-  position: relative;
-  float: right;
-  top: -10px;
-  left: 20px;
-}
-.içerik p{
+.card textarea{
   width: 600px;
 }
 .cont {
@@ -60,14 +55,35 @@
   height: auto;
   position: absolute;
   left: 30%;
-  top: 100px;
+  top: 50px;
   font-family: "Montserrat", sans-serif !important;
   text-align: center;
+  border-radius: 5px;
   background-color: #ffffff;
-  padding: 0px;
+  padding: 30px;
   border: solid 1px #d5dde7;
   margin-bottom: 0px;
 }
-.card-footer-item:hover{
-  background-color: #d5dde7;
+.card{
+  position: relative;
+}
+.ilk-card{
+  margin-bottom: 50px;
+}
+.cont h3{
+  text-align: center;
+}
+.düzenle-başlık{
+  left: 200px;
+  position: relative;
+}
+.düzenle-içerik{
+  position: relative;
+  left: 18px;
+  top: -17px;
+}
+.oluştur-button{
+  position: relative;
+  left: 18px;
+  top: -17px;
 }
