--- a/src/components/home/header/header.css
+++ b/src/components/home/header/header.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
 @import url("https://fonts.googleapis.com/css?family=Raleway");
+ @import url('https://fonts.googleapis.com/css?family=Hanalei+Fill');
 .header {
   position: fixed !important;
   left: 0px;
@@ -31,7 +32,7 @@
   top: -13px;
   }
 .menu-items:hover{
-  background-color: white;
+
   color: #333333;
 }
 /* Style the header links */
@@ -118,10 +119,61 @@
 .dot {
   position: relative;
   left: 3%;
-  top: -18px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 20px;
+  padding-top: 20px
 }
-.logout{
-  text-decoration: none;
-  margin-top: 10px;
-  margin-right: 10px;
+.logout{  
+    font-family: "Montserrat", sans-serif!important;
 }
+ /* Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+
+    position: relative;
+    display: inline-block;
+
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 60px;
+    max-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 20px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a{
+    text-align: left;
+    width: 90%;
+    margin-left: 15px!important;
+    color: #333333;
+    margin-right: 30px!important;
+    margin:10px;
+    text-decoration: none;
+    display: block;
+    font-size: 12px;
+}
+
+
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:active .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;} 
