answer-stats güncellendi

--- a/src/components/içerik/addContent/addContent.css
+++ b/src/components/içerik/addContent/addContent.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Dosis");
 .f-screen{
-  background-color: #a876e3;
+  background-color: #6dc066;
   height: 620px;
 }
 .içerikler-div {
