--- a/src/components/içerik/answer/answer.css
+++ b/src/components/içerik/answer/answer.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
 .main {
   position: relative;
-  top: 160px;
+  height: auto;
+  top: 110px;
   max-width: 800px !important;
   left: 11.7%;
 }
@@ -36,6 +37,7 @@
   font-weight: 100;
   color: #c4dcc6;
   float: right;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 .answer-nick {
@@ -49,28 +51,38 @@
 }
 .seed {
   position: relative;
-  font-size: 35px;
+  font-size: 20px;
   color: #76b852;
   margin-bottom: 2px;
 }
 .arrow-up {
   position: relative;
   margin-bottom: 2px;
+  font-size: 20px;
+  color:#3399ff;
 }
 .arrow-down {
   position: relative;
 }
 .answers-stats {
-  padding: 10px;
-  padding-left: 0;
+  padding: 5px;
+  padding-left: 0px;
   margin-bottom: 20px;
   position: relative;
-  max-width: 50px;
-  height: auto;
+  max-width: 30px;
+  height: 100px;
   border-right: solid 1px #d5dde7;
   background-color: #ffffff;
   text-align: center;
   float: left;
   top: 20px;
   cursor: pointer;
+}
+.yanıt-damla{
+  font-size: 22px;
+  margin-left: 2px;
+  color:#513351!important;
+  font-weight: 100;
+  bottom: 3px;
+  position: relative;
 }
