--- a/src/components/içerik/header/header.css
+++ b/src/components/içerik/header/header.css
@@ -119,7 +119,7 @@
 .dot {
   position: relative;
   left: 3%;
-  padding-bottom: 20px;
+  top: -20px;
   padding-left: 10px;
   padding-right: 20px;
   padding-top: 20px
@@ -146,6 +146,7 @@
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
+  top: 12px;
     display: none;
     position: absolute;
     background-color: #f1f1f1;
@@ -163,7 +164,8 @@
     margin-left: 15px!important;
     color: #333333;
     margin-right: 30px!important;
-    margin:10px;
+    margin:4px;
+    padding-left: 10px;
     text-decoration: none;
     display: block;
     font-size: 12px;
